--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
-  <h1>Hello World {{title}}</h1>
-  <app-button color="green" text="Add"
-    (btnClick)="toggleAddTask()" ></app-button>
+  <h1>{{title}}</h1>
+  <app-button
+  *ngIf="hasRoute('/')"
+  color="{{showAddTask ? 'red' : 'green'}}" text="{{showAddTask ? 'close' : 'Add'}}"
+  (btnClick)="toggleAddTask()" ></app-button>
 </header>
 
